--- a/package.json
+++ b/package.json
@@ -31,7 +31,13 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.12.1",
+    "@types/react-redux": "^7.1.16",
+    "@types/redux-saga": "^0.10.5",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "react-redux": "^7.2.2",
+    "redux": "^4.0.5",
+    "redux-saga": "^1.1.3",
+    "typesafe-actions": "^5.1.0"
   }
 }
