--- a/package.json
+++ b/package.json
@@ -32,10 +32,15 @@
   "dependencies": {
     "@babel/polyfill": "^7.12.1",
     "@types/react-redux": "^7.1.16",
+    "@types/react-router-dom": "^5.1.7",
     "@types/redux-saga": "^0.10.5",
+    "bootstrap": "^4.6.0",
     "react": "^17.0.1",
+    "react-bootstrap": "^1.4.3",
     "react-dom": "^17.0.1",
+    "react-hook-form": "^6.15.1",
     "react-redux": "^7.2.2",
+    "react-router-dom": "^5.2.0",
     "redux": "^4.0.5",
     "redux-saga": "^1.1.3",
     "typesafe-actions": "^5.1.0"
