--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/react-router-dom": "^5.1.7",
     "@types/redux-saga": "^0.10.5",
     "bootstrap": "^4.6.0",
+    "css-loader": "^5.0.1",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.3",
     "react-dom": "^17.0.1",
@@ -43,6 +44,7 @@
     "react-router-dom": "^5.2.0",
     "redux": "^4.0.5",
     "redux-saga": "^1.1.3",
+    "style-loader": "^2.0.0",
     "typesafe-actions": "^5.1.0"
   }
 }
