--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/webpack": "^4.41.26",
     "@types/webpack-dev-server": "^3.11.1",
     "babel-loader": "^8.2.2",
+    "file-loader": "^6.2.0",
     "html-loader": "^1.3.2",
     "html-webpack-plugin": "^4.5.1",
     "source-map-loader": "^2.0.0",
@@ -34,6 +35,7 @@
     "@types/react-redux": "^7.1.16",
     "@types/react-router-dom": "^5.1.7",
     "@types/redux-saga": "^0.10.5",
+    "@types/styled-components": "^5.1.7",
     "bootstrap": "^4.6.0",
     "css-loader": "^5.0.1",
     "react": "^17.0.1",
@@ -45,6 +47,7 @@
     "redux": "^4.0.5",
     "redux-saga": "^1.1.3",
     "style-loader": "^2.0.0",
+    "styled-components": "^5.2.1",
     "typesafe-actions": "^5.1.0"
   }
 }
