--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,8 @@
     "forceConsistentCasingInFileNames": true,
     "moduleResolution": "node",
     "resolveJsonModule": true,
-    "isolatedModules": true
+    "isolatedModules": true,
+    "typeRoots": ["./node_modules/@types", "./src/@types"]
   },
-  "include": ["src"]
+  "include": ["src", "util"]
 }
