--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@types/styled-components": "^5.1.7",
     "bootstrap": "^4.6.0",
     "css-loader": "^5.0.1",
+    "firebase": "^8.2.6",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.3",
     "react-dom": "^17.0.1",
