--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "webpack -w",
+    "build": "NODE_ENV=production webpack --progress",
     "start": "webpack serve --env development"
   },
   "keywords": [],
@@ -47,6 +47,7 @@
     "react-router-dom": "^5.2.0",
     "redux": "^4.0.5",
     "redux-saga": "^1.1.3",
+    "serve": "^11.3.2",
     "style-loader": "^2.0.0",
     "styled-components": "^5.2.1",
     "typesafe-actions": "^5.1.0"
