--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "webpack serve --config webpack.dev.js",
     "build": "NODE_ENV=production webpack --progress",
-    "start": "webpack serve --env development"
+    "builds": "webpack --config webpack.prod.js"
   },
   "keywords": [],
   "author": "",
