--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "webpack serve --config webpack.dev.js",
     "build": "NODE_ENV=production webpack --progress",
-    "builds": "webpack --config webpack.prod.js"
+    "builds": "webpack --config webpack.prod.js",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -16,6 +17,8 @@
     "@babel/preset-env": "^7.12.13",
     "@babel/preset-react": "^7.12.13",
     "@babel/preset-typescript": "^7.12.13",
+    "@testing-library/react": "^11.2.5",
+    "@testing-library/jest-dom": "^5.11.9",
     "@types/react": "^17.0.1",
     "@types/react-dom": "^17.0.0",
     "@types/webpack": "^4.41.26",
@@ -24,6 +27,7 @@
     "file-loader": "^6.2.0",
     "html-loader": "^1.3.2",
     "html-webpack-plugin": "^4.5.1",
+    "jest": "^26.6.3",
     "source-map-loader": "^2.0.0",
     "ts-loader": "^8.0.14",
     "typescript": "^4.1.3",
