--- a/package.json
+++ b/package.json
@@ -5,9 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack serve --config webpack.dev.js",
-    "build": "NODE_ENV=production webpack --progress",
-    "builds": "webpack --config webpack.prod.js",
-    "test": "jest"
+    "build": "webpack --config webpack.prod.js",
+    "test": "jest -c jest.config.js --watch"
   },
   "keywords": [],
   "author": "",
@@ -17,18 +16,22 @@
     "@babel/preset-env": "^7.12.13",
     "@babel/preset-react": "^7.12.13",
     "@babel/preset-typescript": "^7.12.13",
-    "@testing-library/react": "^11.2.5",
     "@testing-library/jest-dom": "^5.11.9",
+    "@testing-library/react": "^11.2.5",
+    "@testing-library/react-hooks": "^5.0.3",
+    "@types/jest": "^26.0.20",
     "@types/react": "^17.0.1",
     "@types/react-dom": "^17.0.0",
     "@types/webpack": "^4.41.26",
     "@types/webpack-dev-server": "^3.11.1",
+    "babel-jest": "^26.6.3",
     "babel-loader": "^8.2.2",
     "file-loader": "^6.2.0",
     "html-loader": "^1.3.2",
     "html-webpack-plugin": "^4.5.1",
     "jest": "^26.6.3",
     "source-map-loader": "^2.0.0",
+    "ts-jest": "^26.5.1",
     "ts-loader": "^8.0.14",
     "typescript": "^4.1.3",
     "webpack": "^5.20.0",
@@ -43,6 +46,7 @@
     "@types/redux-saga": "^0.10.5",
     "@types/styled-components": "^5.1.7",
     "bootstrap": "^4.6.0",
+    "core-js": "^3.9.0",
     "css-loader": "^5.0.1",
     "firebase": "^8.2.6",
     "react": "^17.0.1",
@@ -53,6 +57,7 @@
     "react-router-dom": "^5.2.0",
     "redux": "^4.0.5",
     "redux-saga": "^1.1.3",
+    "regenerator-runtime": "^0.13.7",
     "serve": "^11.3.2",
     "style-loader": "^2.0.0",
     "styled-components": "^5.2.1",
