--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,5 +17,5 @@
     "isolatedModules": true,
     "typeRoots": ["./node_modules/@types", "./src/@types"]
   },
-  "include": ["src", "src/util", "setupTests.ts"]
+  "include": ["src", "src/util", "setupTests.js"]
 }
