--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "react-hook-form": "^6.15.1",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
+    "recharts": "^2.0.8",
     "redux": "^4.0.5",
     "redux-saga": "^1.1.3",
     "regenerator-runtime": "^0.13.7",
