--- a/.babelrc
+++ b/.babelrc
@@ -2,11 +2,7 @@
   "presets": [
     [
       "@babel/preset-env",
-      {
-        "targets": {
-          "node": "current"
-        }
-      }
+      { "targets": { "browsers": ["last 2 versions", ">= 5% in KR"] } }
     ],
     "@babel/preset-react",
     "@babel/preset-typescript"
