--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack serve --config webpack.dev.js",
+    "start": "webpack serve --config webpack.dev.js --host 0.0.0.0",
     "build": "webpack --config webpack.prod.js",
     "test": "jest -c jest.config.js --watch"
   },
@@ -13,9 +13,12 @@
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.12.13",
+    "@babel/plugin-transform-modules-commonjs": "^7.13.8",
+    "@babel/plugin-transform-runtime": "^7.13.10",
     "@babel/preset-env": "^7.12.13",
     "@babel/preset-react": "^7.12.13",
     "@babel/preset-typescript": "^7.12.13",
+    "@babel/runtime-corejs3": "^7.13.10",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/react-hooks": "^5.0.3",
@@ -32,21 +35,20 @@
     "jest": "^26.6.3",
     "source-map-loader": "^2.0.0",
     "ts-jest": "^26.5.1",
-    "ts-loader": "^8.0.14",
     "typescript": "^4.1.3",
     "webpack": "^5.20.0",
     "webpack-cli": "^4.5.0",
     "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
-    "@babel/polyfill": "^7.12.1",
+    "@babel/runtime": "^7.13.10",
     "@reduxjs/toolkit": "^1.5.0",
     "@types/react-redux": "^7.1.16",
     "@types/react-router-dom": "^5.1.7",
     "@types/redux-saga": "^0.10.5",
     "@types/styled-components": "^5.1.7",
     "bootstrap": "^4.6.0",
-    "core-js": "^3.9.0",
+    "core-js": "^3.9.1",
     "css-loader": "^5.0.1",
     "firebase": "^8.2.10",
     "react": "^17.0.1",
@@ -59,9 +61,7 @@
     "redux": "^4.0.5",
     "redux-saga": "^1.1.3",
     "regenerator-runtime": "^0.13.7",
-    "serve": "^11.3.2",
     "style-loader": "^2.0.0",
-    "styled-components": "^5.2.1",
-    "typesafe-actions": "^5.1.0"
+    "styled-components": "^5.2.1"
   }
 }
