Fix Code Conventions

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack serve --config webpack.dev.js --host 0.0.0.0",
+    "start": "webpack serve --config webpack.dev.js",
+    "dev": "webpack serve --config webpack.dev.js --host 0.0.0.0",
     "build": "webpack --config webpack.prod.js",
     "test": "jest -c jest.config.js --watch"
   },
