--- a/.babelrc
+++ b/.babelrc
@@ -1,19 +1,25 @@
 {
   "presets": [
-    ["@babel/preset-env", { "targets": { "ie": 11 }, "debug": true }],
+    [
+      "@babel/preset-env",
+      {
+        "targets": { "browsers": ["last 2 versions", ">= 5% in KR"] },
+        "debug": true
+      }
+    ],
     "@babel/preset-react",
     "@babel/preset-typescript"
+  ],
+  "plugins": [
+    [
+      "@babel/plugin-transform-runtime",
+      {
+        "absoluteRuntime": false,
+        "corejs": 3,
+        "helpers": true,
+        "regenerator": true,
+        "useESModules": false
+      }
+    ]
   ]
-  // "plugins": [
-  //   [
-  //     "@babel/plugin-transform-runtime",
-  //     {
-  //       "absoluteRuntime": false,
-  //       "corejs": 3,
-  //       "helpers": true,
-  //       "regenerator": true,
-  //       "useESModules": false
-  //     }
-  //   ]
-  // ]
 }
